# rustysynth

rustysynth/: Cargo.toml
rustysynth/src/: bi_quad_filter.rs  channel.rs  chorus.rs  envelope_stage.rs  instrument_region.rs  lfo.rs  lib.rs  loop_mode.rs  midifile.rs  midifile_sequencer.rs  modulation_envelope.rs  oscillator.rs  preset_region.rs  reverb.rs  soundfont.rs  synthesizer.rs  synthesizer_settings.rs  voice.rs  volume_envelope.rs
rustysynth_test/src/: musescore_instrument_test.rs  musescore_preset_test.rs  timgm6mb_instrument_test.rs  timgm6mb_preset_test.rs
