[package]
name = "rustysynth-tutti"
version = "1.3.6"
authors = ["Nobuaki Tanaka"]
edition = "2021"

description = "A SoundFont MIDI synthesizer written in pure Rust (Tutti fork with Clone support)"
documentation = "https://docs.rs/rustysynth/latest/rustysynth/"
readme = "README.md"
repository = "https://github.com/PoHsuanLai/rustysynth"
license = "MIT"
keywords = ["soundfont", "midi", "synthesizer", "audio", "music"]
categories = ["multimedia::audio"]

[dependencies]
