[package]
name = "rustysynth-tutti"
version = "1.3.6"
authors = ["Nobuaki Tanaka"]
edition = "2021"

description = "A SoundFont MIDI synthesizer written in pure Rust (Tutti fork with Clone support)"
documentation = "https://docs.rs/rustysynth/latest/rustysynth/"
readme = "README.md"
repository = "https://github.com/PoHsuanLai/rustysynth"
license = "MIT"
keywords = ["soundfont", "midi", "synthesizer", "audio", "music"]
categories = ["multimedia::audio"]

[features]
default = []

# Enables `impl TuttiAsset for SoundFont` and `#[derive(Asset, TypePath)]` on
# `SoundFont`. Pulls tutti-asset + optional bevy_asset/bevy_reflect.
bevy_asset = [
    "dep:tutti-asset",
    "tutti-asset/std",
    "dep:bevy_asset",
    "dep:bevy_reflect",
]

[dependencies]
tutti-asset = { version = "0.0.1", path = "../../tutti-asset", default-features = false, optional = true }
bevy_asset = { version = "0.17", default-features = false, optional = true }
bevy_reflect = { version = "0.17", default-features = false, optional = true }
thiserror = { version = "2", default-features = false, optional = true }
